--- a/index.html
+++ b/index.html
@@ -12,10 +12,10 @@
       crossorigin="anonymous"
     />
 
-    <title>Weather App</title>
+    <title>Vanilla Weather App</title>
   </head>
   <body>
-    <h1>Weather</h1>
+    <h1>Weather App</h1>
     <script src="src/index.js"></script>
   </body>
 </html>
