--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <link rel="stylesheet" href="src/style.css" />
+
     <link
       href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/css/bootstrap.min.css"
       rel="stylesheet"
@@ -15,6 +15,7 @@
       src="https://kit.fontawesome.com/1d5eee0cac.js"
       crossorigin="anonymous"
     ></script>
+    <link rel="stylesheet" href="src/style.css" />
     <title>Vanilla Weather App</title>
   </head>
   <body>
@@ -28,7 +29,7 @@
         <div class="row">
           <div class="col-6">
             <i class="fas fa-cloud-rain"></i>
-            12°C | °F
+            <span>12°C | °F</span>
           </div>
           <div class="col-6">
             <ul>
@@ -38,16 +39,16 @@
             </ul>
           </div>
         </div>
+        <small>
+          <a
+            href="https://github.com/haleytoye/vanilla-weather-app"
+            target="_blank"
+          >
+            Open-source code</a
+          >
+          by Haley Toye
+        </small>
       </div>
-      <small>
-        <a
-          href="https://github.com/haleytoye/vanilla-weather-app"
-          target="_blank"
-        >
-          Open-source code</a
-        >
-        by Haley Toye
-      </small>
     </div>
     <script src="src/index.js"></script>
   </body>
