--- a/index.html
+++ b/index.html
@@ -20,23 +20,34 @@
   </head>
   <body>
     <div class="container">
-      <div class="weather-app">
-        <h1>New York</h1>
-        <ul>
-          <li>Friday 05.:00</li>
-          <li>Clear</li>
-        </ul>
-        <div class="row">
-          <div class="col-6">
-            <i class="fas fa-cloud-rain"></i>
-            <span>12°C | °F</span>
-          </div>
-          <div class="col-6">
+      <div class="weather-app-wrapper">
+        <div class="weather-app">
+          <div class="overveiw">
+            <h1>New York</h1>
             <ul>
-              <li>Precipitation: 0%</li>
-              <li>Humidity: 73%</li>
-              <li>Wind: 20 km/h</li>
+              <li>Friday 05:00</li>
+              <li>Clear</li>
             </ul>
+          </div>
+          <div class="row">
+            <div class="col-6">
+              <div class="d-flex weather-temperature">
+                <i class="fas fa-cloud-rain" id="icon"></i>
+                <div class="weather-temperature">
+                  <strong id="temperature">12</strong
+                  ><span class="weather-temperature-units">
+                    °C | <a href="#">°F</a></span
+                  >
+                </div>
+              </div>
+            </div>
+            <div class="col-6">
+              <ul>
+                <li>Precipitation: 0%</li>
+                <li>Humidity: 73%</li>
+                <li>Wind: 20 km/h</li>
+              </ul>
+            </div>
           </div>
         </div>
         <small>
