--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
           <div class="overveiw">
             <h1 id="city"></h1>
             <ul>
-              <li id="date-time">Friday 05:00</li>
+              <li>Last updated at: <span id="date"></span></li>
               <li id="description"></li>
             </ul>
           </div>
