added relevant icon from api

--- a/index.html
+++ b/index.html
@@ -26,14 +26,14 @@
           <div class="overveiw">
             <h1 id="city"></h1>
             <ul>
-              <li>Last updated at: <span id="date"></span></li>
+              <li>Last updated: <span id="date"></span></li>
               <li id="description"></li>
             </ul>
           </div>
           <div class="row">
             <div class="col-6">
               <div class="d-flex weather-temperature">
-                <i class="fas fa-cloud-rain" id="icon"></i>
+                <img src="" id="icon" alt="" />
                 <div class="weather-temperature">
                   <strong id="temperature"></strong
                   ><span class="weather-temperature-units">
