--- a/index.html
+++ b/index.html
@@ -46,7 +46,7 @@
               </div>
               <div class="col-4" id="btn-current">
                 <button
-                  class="btn btn-light shadow-sm w-100"
+                  class="btn btn-light btn-md shadow-sm w-100"
                   id="btn-current-location"
                 >
                   Current Location
@@ -58,7 +58,9 @@
           <div class="overveiw">
             <h1 id="city"></h1>
             <ul>
-              <li>Last updated: <span id="date"></span></li>
+              <li>
+                <small>Last updated: <span id="date"></span></small>
+              </li>
               <li id="description"></li>
             </ul>
           </div>
