temp conversions css and js "active"

--- a/index.html
+++ b/index.html
@@ -65,18 +65,19 @@
             </ul>
           </div>
           <div class="row">
-            <div class="col-6">
+            <div class="col-7">
               <div class="d-flex weather-temperature">
                 <img src="" id="icon" alt="" />
                 <div class="weather-temperature">
                   <strong id="temperature"></strong
                   ><span class="weather-temperature-units">
-                    °C | <a href="#">°F</a></span
+                    <a href="#" id="cel-link" class="active">°C</a> |
+                    <a href="#" id="far-link">°F</a></span
                   >
                 </div>
               </div>
             </div>
-            <div class="col-6">
+            <div class="col-5">
               <ul>
                 <li>Feels Like: <span id="feels-like"></span></li>
                 <li>Humidity: <span id="humidity"></span>%</li>
