removed current location due to api restrictions

--- a/index.html
+++ b/index.html
@@ -25,10 +25,10 @@
         <div class="weather-app">
           <form id="search-form" class="mb-3">
             <div class="row">
-              <div class="col-6" id="search-bar">
+              <div class="col-8" id="search-bar">
                 <input
                   type="search"
-                  placeholder="City name..."
+                  placeholder="Enter city name here..."
                   class="form-control shadow-sm"
                   id="city-input"
                   autocomplete="off"
@@ -42,14 +42,6 @@
                   id="btn-submit"
                 >
                   <i class="fas fa-search"></i>
-                </button>
-              </div>
-              <div class="col-4" id="btn-current">
-                <button
-                  class="btn btn-light btn-md shadow-sm w-100"
-                  id="btn-current-location"
-                >
-                  Current Location
                 </button>
               </div>
             </div>
@@ -93,6 +85,7 @@
           <a
             href="https://github.com/haleytoye/vanilla-weather-app"
             target="_blank"
+            class="open-source"
           >
             Open-source code</a
           >
