--- a/index.html
+++ b/index.html
@@ -71,13 +71,32 @@
             </div>
             <div class="col-5">
               <ul>
-                <li>Feels Like: <span id="feels-like"></span></li>
+                <li>Feels Like: <span id="feels-like"></span>°</li>
                 <li>Humidity: <span id="humidity"></span>%</li>
                 <li>
                   Wind: <span id="wind"></span
                   ><span id="wind-units"> km/h</span>
                 </li>
               </ul>
+            </div>
+          </div>
+          <div class="weather-forecast">
+            <div class="row">
+              <div class="col-2">
+                <div class="forecast-date">
+                  Thu
+                  <img
+                    src="http://shecodes-assets.s3.amazonaws.com/api/weather/icons/few-clouds-night.png"
+                    id="icon"
+                    alt=""
+                    width="50"
+                  />
+                  <div class="forecast-temp">
+                    <span class="forecast-temp-max">18°</span>
+                    |<span class="forecast-temp-min"> 12°</span>
+                  </div>
+                </div>
+              </div>
             </div>
           </div>
         </div>
