removed Far and Cel conversion and all Far html

--- a/index.html
+++ b/index.html
@@ -62,16 +62,13 @@
                 <img src="" id="icon" alt="" />
                 <div class="weather-temperature">
                   <strong id="temperature"></strong
-                  ><span class="weather-temperature-units">
-                    <a href="#" id="cel-link" class="active">°C</a> |
-                    <a href="#" id="far-link">°F</a></span
-                  >
+                  ><span class="weather-temperature-units"> °C </span>
                 </div>
               </div>
             </div>
             <div class="col-5">
               <ul>
-                <li>Feels Like: <span id="feels-like"></span>°</li>
+                <li>Feels Like: <span id="feels-like"></span>°C</li>
                 <li>Humidity: <span id="humidity"></span>%</li>
                 <li>
                   Wind: <span id="wind"></span
