--- a/index.html
+++ b/index.html
@@ -81,16 +81,10 @@
             <div class="row">
               <div class="col-2">
                 <div class="forecast-date">
-                  Thu
-                  <img
-                    src="http://shecodes-assets.s3.amazonaws.com/api/weather/icons/few-clouds-night.png"
-                    id="icon"
-                    alt=""
-                    width="50"
-                  />
+                  <img src="" id="icon" alt="" width="50" />
                   <div class="forecast-temp">
-                    <span class="forecast-temp-max">18°</span>
-                    |<span class="forecast-temp-min"> 12°</span>
+                    <span class="forecast-temp-max"></span>
+                    <span class="forecast-temp-min"> </span>
                   </div>
                 </div>
               </div>
