--- a/index.html
+++ b/index.html
@@ -91,16 +91,18 @@
             </div>
           </div>
         </div>
-        <small>
-          <a
-            href="https://github.com/haleytoye/vanilla-weather-app"
-            target="_blank"
-            class="open-source"
-          >
-            Open-source code</a
-          >
-          by Haley Toye
-        </small>
+        <div class="source">
+          <small>
+            <a
+              href="https://github.com/haleytoye/vanilla-weather-app"
+              target="_blank"
+              class="open-source"
+            >
+              Open-source code</a
+            >
+            by Haley Toye
+          </small>
+        </div>
       </div>
     </div>
     <script src="src/index.js"></script>
